# forecast

./: .env.example  .gitignore  Makefile  README.md  build_eval_report.py  docker-compose.yml  pyproject.toml  run_benchmark.py  run_eval.py  run_live.py  run_llm_eval.py
backend/: Dockerfile  alembic.ini  requirements.txt
backend/app/: config.py  database.py  main.py
backend/app/adapters/: __init__.py  base.py  dob_permits.py  forecastbench.py  fred_data.py  hpd_complaints.py  metaculus.py  nychvs.py  pluto.py  rent_guidelines.py
backend/app/api/: __init__.py  backtests.py  base_rates.py  benchmarks.py  calibration.py  costs.py  evaluations.py  evidence.py  experiments.py  forecasts.py  questions.py  resolutions.py  router.py  scenarios.py
backend/app/core/: dependencies.py  eval_cli.py  logging.py  seed.py  seed_eval.py
backend/app/models/: __init__.py  backtest.py  base.py  base_rate.py  benchmark.py  calibration_run.py  cost_log.py  evaluation.py  evidence.py  experiment.py  forecast.py  model_version.py  policy.py  question.py  resolution.py  scenario.py  source_document.py  target.py
backend/app/schemas/: __init__.py  backtest.py  base_rate.py  benchmark.py  calibration.py  common.py  cost.py  (+8 more)
backend/migrations/: env.py
backend/tests/: __init__.py  conftest.py  test_ablation_runner.py  test_api_questions.py  test_base_rate_engine.py  test_baseline_predictors.py  test_belief_updater.py  test_benchmark_harness.py  test_calibration.py  test_cost_tracker.py  test_eval_metrics.py  test_evidence_scorer.py  test_orchestrator.py  test_replay_engine.py  test_scenario_engine.py
data/: fb_submit_instructions.md  forecastbench_questions.json  forecastbench_resolutions.json  live_questions.json  metaculus_open.json  resolved_post_cutoff.json
data/seeds/: seed_base_rates.json  seed_evaluation_sets.json  seed_evidence.json  seed_experiment_configs.json  seed_historical_evidence.json  seed_historical_questions.json  seed_policy_events.json  seed_questions.json  seed_scenarios.json
docs/: ablation_guide.md  architecture.md  benchmark_guide.md
forecast/: config.py  data.py  dates.py  display.py  llm.py  metrics.py  prompts.py  search.py
frontend/: Dockerfile  package.json  tailwind.config.ts
infra/: docker-compose.dev.yml
pipelines/: data_pipeline.py
(+58 files in other folders)
