[project]
name = "forecast"
version = "0.1.0"
description = "Forecast – AI-powered forecasting platform"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.29",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "alembic>=1.13",
    "celery[redis]>=5.3",
    "redis>=5.0",
    "pydantic-settings>=2.2",
    "httpx>=0.27",
    "openai>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.1",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.4",
    "mypy>=1.9",
    "pre-commit>=3.7",
    "httpx>=0.27",
]

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"

# ── Ruff ──────────────────────────────────────────────────
[tool.ruff]
target-version = "py311"
line-length = 120
src = ["backend", "forecast"]

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "N",   # pep8-naming
    "UP",  # pyupgrade
    "B",   # flake8-bugbear
    "S",   # flake8-bandit
    "A",   # flake8-builtins
    "C4",  # flake8-comprehensions
    "RUF", # ruff-specific rules
]
ignore = [
    "S101",  # allow assert in tests
    "S110",  # try-except-pass is intentional for optional features
    "S112",  # try-except-continue is intentional for batch processing
]

[tool.ruff.lint.per-file-ignores]
"forecast/prompts.py" = ["E501"]  # prompts are long by nature
"run_benchmark.py" = ["E501"]
"run_llm_eval.py" = ["E501"]
"run_eval.py" = ["E501"]
"run_live.py" = ["E501"]
"forecast/display.py" = ["E501"]

[tool.ruff.lint.isort]
known-first-party = ["app", "forecast"]

[tool.ruff.format]
quote-style = "double"

# ── Pytest ────────────────────────────────────────────────
[tool.pytest.ini_options]
testpaths = ["tests", "backend/tests"]
asyncio_mode = "auto"
addopts = "-ra -q --strict-markers --cov=backend --cov-report=term-missing"
markers = [
    "slow: marks tests as slow (deselect with '-m \"not slow\"')",
    "integration: marks integration tests",
]

# ── Mypy ──────────────────────────────────────────────────
[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]
